# VIRALIQ

./: .gitignore  README.md  create_video_embeddings.py  image_to_vec.py  move_dist.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  video_to_image_feats.py  viraliq.py
.github/workflows/: build.yml
backend/: create_video_embeddings.py  image_to_vec.py  retrieve_videos.py  video_to_image_feats.py
client/: main.js  package-lock.json  package.json
client/src/: App.svelte
database_clustering/: cluster_embeddings.py  create_video_embeddings.py  image_to_vec.py  retrieve_videos.py  video_to_image_feats.py
src/: index.ejs
src/main/: index.js
src/renderer/: App.vue  main.js
src/renderer/components/: Main.vue  Primary.vue
static/scripts/: create_video_embeddings.py  image_to_vec.py  retrieve_videos.py  test.py  video_to_image_feats.py
static/scripts/server/: image_to_vec.py  retrieve_videos.py  server.py
video_clustering/: image_to_vec.py  retrieve_videos.py
