[tool.poetry]
name = "viraliq"
version = "0.1.0"
description = "Search for videos using an image query."
readme = "README.md"
homepage = "https://github.com/Aveek-Saha/VIRALIQ"
repository = "https://github.com/Aveek-Saha/VIRALIQ"
authors = ["Aveek Saha <aveek.s98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.6.0"
numpy = "1.19.5"
scikit-learn = "0.24.2"
tqdm = "^4.62.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
